# doer

./: .markdownlint.yaml  Cargo.toml  LICENSE  README.md  doer.kdl  shell.nix
.githooks/: pre-commit  pre-push
crates/doer/: Cargo.toml
crates/doer-parser/: Cargo.toml
crates/doer-parser/src/: lib.rs
crates/doer-parser/src/config/: helper.rs  kdl_ext.rs  mod.rs  template.rs
crates/doer-parser/tests/: test_config.rs  test_task.rs
crates/doer-runner/: Cargo.toml
crates/doer-runner/src/: lib.rs  prelude.rs
crates/doer-runner/tests/: test_runner.rs
crates/doer-spec/: Cargo.toml
crates/doer-spec/src/: lib.rs  print.rs
crates/doer/src/: cli.rs  git_hooks.rs  lib.rs  main.rs
