[workspace]
members = [
    "crates/doer-parser",
    "crates/doer",
    "crates/doer-runner",
    "crates/doer-spec",
]
default-members = ["crates/doer"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
doer-parser = { path = "crates/doer-parser" }
doer-runner = { path = "crates/doer-runner" }
doer-spec = { path = "crates/doer-spec" }
anyhow = "1.0.102"
clap = "4.6.1"
kdl = "6.5.0"
colored = "3.1.1"
tokio = "1"
